# sonicbot_rust

./: .gitignore  Cargo.nix  Cargo.toml  README.md  build.rs  conf.json.dist
linewrapper/: Cargo.toml
linewrapper/src/: lib.rs
sonicmacros/: Cargo.toml
sonicmacros/src/: lib.rs
sonicobject/: Cargo.toml
sonicobject/src/: lib.rs
src/: lib.rs  main.rs  msgfmts.rs  parser.rs  socketwrapper.rs
src/plugins/: addhost.rs  choose.rs  deop.rs  greet.rs  join.rs  mod.rs  nickreg.rs  op.rs  part.rs  pm.rs  randfact.rs  seen.rs  violence.rs
