[package]
name = "sonicbot"
version = "0.1.8"
authors = ["Westly Ward <sonicrules1234@gmail.com>"]
edition = "2018"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[lib]
#crate-type = ["lib", "cdylib"]

[dependencies]
rustls = "0.19.1"
webpki = "0.21"
webpki-roots = "0.21.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
rand = "0.8.4"
reqwest = { version = "0.10", default-features = false, features = ["blocking", "rustls-tls"] }
#sled = "0.34.6"
#sonicobject = { path = "./sonicobject" }
#acid-store = { version = "0.9.1", features = ["store-directory"] }
sonicmacros = { path = "./sonicmacros" }
humantime = "2.1.0"
textwrap = "0.14.2"
regex = "1.5.4"
hex = "0.4.3"
sha2 = "0.9.5"
ctrlc = "3.1.9"
chrono = "0.4.19"
include_dir = "0.6.2"
sonic_serde_object = "0.1.1"
aiml_ported = "0.1.5"
sonicobject = "0.1.1"
#empty-option = "0.1.1"

[target.'cfg(target_os = "android")'.dependencies]
macroquad = "0.3.7"
linewrapper = { path = "./linewrapper" }
#rustls = "0.19.1"
#webpki = "0.21"
#webpki-roots = "0.21.0"
#serde = { version = "1.0.126", features = ["derive"] }
#serde_json = "1.0.64"
#rand = "0.8.4"
#acid-store = { version = "0.8.0", features = ["store-directory"] }
#sled = "0.34.6"
#sonicobject = { path = "../sonicobject" }
#empty-option = "0.1.1"
#ndk = "0.3.0"
#ndk-glue = "0.3.0"


[[package.metadata.android.permission]]
name = "android.permission.INTERNET"

#[[package.metadata.android.uses_permission]]
#name = "android.permission.INTERNET"

[[package.metadata.android.permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[package.metadata.android]
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android" ]
target_sdk_version = 30
min_sdk_version = 23
