[package]
name = "sonicobject"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
#sled = "0.34.6"
acid-store = { version = "0.8.0", features = ["store-directory"] }
